[package]
name = "sim_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.5"
tokio-postgres-rustls = "0.9.0"
rustls = "0.20.2"
axum = "0.3.4"
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
deadpool-postgres = "0.10.1"
envy = "0.4.2"
dotenv = "0.15.0"
tower-http = { version = "0.1.2", features = ["auth"] }
base64 = "0.13.0"